feat: Make standards checker more correct
[#OCD-4794]